--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
 @layer base {
     html {
         @apply scroll-smooth;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Inter', sans-serif;
     }
 }
